--- a/project-1/README
+++ b/project-1/README
@@ -1,17 +1,19 @@
-How To run
-==============
-Running the Starter Code should be Fairly Simple
-make
-./example <request.txt>
+################################################################################
+# README                                                                       #
+#                                                                              #
+# Implementation of a Lisod Server                                             #
+#                                                                              #
+# Authors:                                                                     #
+# Yunie Mao <ym224@cornell.edu>                                                #
+# David (Zheyuan) Gu <zg245@cornell.edu >                                      #
+################################################################################
 
-We have provided to sample Requests
-sample_request_example
-sample_request_realistic
 
-The given parser is only able to parse sample_request_example. You will need to
-modify the rules of the grammar in parser.y to support the spec and also support malformed requests.
+Description of Files
 
-TODO
-++The parser should handle entire HTTP 1.1 Request Spec
-++You must also handle malformed requests
-++Keep in mind that the HTTP 1.1 Spec requires you to support request pipelining
+
+
+How to Run
+
+
+Design and Implementation
